--- a/docs/posts/05wk-1.out.ipynb
+++ b/docs/posts/05wk-1.out.ipynb
@@ -11,29 +11,13 @@
         "\n",
         "<a href=\"https://colab.research.google.com/github/guebin/DL2024/blob/main/posts/05wk-1.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" style=\"text-align: left\"></a>\n",
         "\n",
-        "# 1. 강의영상"
-      ],
-      "id": "bb3c3c3c-effb-4f85-996a-134bb15345dc"
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [],
-      "source": [
-        "#{{<video https://youtu.be/playlist?list=PLQqh36zP38-wHAizLm_MYaUweataauffD&si=U5TXo5UgkRGc6a-F >}}"
-      ],
-      "id": "df00dc1a-14ec-4073-b40d-836a31ac908c"
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
+        "# 1. 강의영상\n",
+        "\n",
+        "<https://youtu.be/playlist?list=PLQqh36zP38-wjNGgd4gmQJbQ66NLjUC2y&si=dusDZAwGOJS9TOKJ>\n",
+        "\n",
         "# 2. Imports"
       ],
-      "id": "925ea15b-7fd8-4b00-aafd-267dd2fb1083"
+      "id": "e0426c4c-c29f-4e73-9ca0-ffea66a6344b"
     },
     {
       "cell_type": "code",
@@ -63,7 +47,7 @@
         "\n",
         "`-` cpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "4776a62e-65c6-4c06-b567-5cc816384c38"
+      "id": "112930e8-d888-45ad-a303-e21ecf49a735"
     },
     {
       "cell_type": "code",
@@ -86,7 +70,7 @@
       "source": [
         "`-` gpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "1d4addec-b951-4db5-8f51-74b738c4f945"
+      "id": "7ae25fec-2fb0-4540-83ed-4635c38c4895"
     },
     {
       "cell_type": "code",
@@ -192,7 +176,7 @@
         "\n",
         "`-` cpu 혹은 gpu 연산이 가능한 메모리에 저장된 값들을 확인"
       ],
-      "id": "3d07c2f5-0e9f-464b-9a3f-f0a0917ce9c8"
+      "id": "1156b7cb-3ccd-4e09-9124-56c817ed448e"
     },
     {
       "cell_type": "code",
@@ -226,7 +210,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "40288478-3952-4bf3-aaa3-aa45a67ca411"
+      "id": "02963db5-2d0b-4aad-8e4a-a8fd1f130b74"
     },
     {
       "cell_type": "code",
@@ -246,7 +230,7 @@
       "source": [
         "(예시2)"
       ],
-      "id": "b0a3fd2c-a40a-4bd1-96c4-232711767372"
+      "id": "b1be91bd-fc21-48c9-b3f9-4e86f70eedc6"
     },
     {
       "cell_type": "code",
@@ -266,7 +250,7 @@
       "source": [
         "(예시3)"
       ],
-      "id": "280bbe4e-9a19-4dd5-8df6-512e930545bb"
+      "id": "a676fb9a-a10b-4319-a755-9382fd3064f3"
     },
     {
       "cell_type": "code",
@@ -305,7 +289,7 @@
         "\n",
         "(예시4)"
       ],
-      "id": "4f248679-afa1-4d63-89c4-2dea661198d9"
+      "id": "2d120eba-4a4a-4bd3-b5e1-5eca4c9f264f"
     },
     {
       "cell_type": "code",
@@ -325,7 +309,7 @@
       "source": [
         "(예시5)"
       ],
-      "id": "3b393ce8-3e04-468f-942e-8677cd6af65a"
+      "id": "7d9d6a3e-04d9-4178-afea-c20939d59d4d"
     },
     {
       "cell_type": "code",
@@ -345,7 +329,7 @@
       "source": [
         "(예시6)"
       ],
-      "id": "ca02a88f-8b87-41ae-a884-3d0d12bfe9b5"
+      "id": "7a291c9e-da25-431f-9c10-3955dc80c983"
     },
     {
       "cell_type": "code",
@@ -365,7 +349,7 @@
       "source": [
         "(예시7)"
       ],
-      "id": "63cdaee0-16c6-4453-9702-3656169b46df"
+      "id": "0d203caf-00ee-4a2a-a4a3-66f0af64aacb"
     },
     {
       "cell_type": "code",
@@ -385,7 +369,7 @@
       "source": [
         "(예시8)"
       ],
-      "id": "ec908019-f90f-4d34-abf7-d65be049e740"
+      "id": "50aa437d-067c-4550-bdca-b64632020d26"
     },
     {
       "cell_type": "code",
@@ -405,7 +389,7 @@
       "source": [
         "## B. 시간측정 (예비학습)"
       ],
-      "id": "e917cfe9-3e03-48ef-9fb4-a039a753f6bf"
+      "id": "afb6ed59-b6d2-4ebf-8985-e090c0e89003"
     },
     {
       "cell_type": "code",
@@ -463,7 +447,7 @@
         "\n",
         "`-` CPU (512 nodes)"
       ],
-      "id": "7d6738ce-690a-4422-9cdb-4b5f912149ca"
+      "id": "25a1a104-8f47-44b9-b86f-3c6e9bb427a6"
     },
     {
       "cell_type": "code",
@@ -507,7 +491,7 @@
       "source": [
         "`-` GPU (512 nodes)"
       ],
-      "id": "7186aaf4-69e6-4f44-be43-1bccce1a335c"
+      "id": "9e01f2b9-87a3-46a4-8d07-7627491e63e0"
     },
     {
       "cell_type": "code",
@@ -555,7 +539,7 @@
         "\n",
         "`-` CPU (20,480)"
       ],
-      "id": "55f72134-6f53-4dc6-88c6-756c52202161"
+      "id": "457fa203-bf0d-459a-80c4-cc0714c79a07"
     },
     {
       "cell_type": "code",
@@ -599,7 +583,7 @@
       "source": [
         "`-` GPU (20,480)"
       ],
-      "id": "f9563a5d-0695-4429-80e5-b566652188af"
+      "id": "e240e83f-e3ad-4e4b-9f61-1454b416786b"
     },
     {
       "cell_type": "code",
@@ -649,7 +633,7 @@
         "\n",
         "`-` CPU (204,800)"
       ],
-      "id": "7b983ddf-6e7d-49c1-b583-bb40abcc224a"
+      "id": "f1c13727-5fe7-4dcc-ab72-cecc90cb975c"
     },
     {
       "cell_type": "code",
@@ -693,7 +677,7 @@
       "source": [
         "`-` GPU (204,800)"
       ],
-      "id": "66007103-c2e0-449a-b8f2-3d3d497faaec"
+      "id": "98d3e9ae-bab8-4b5e-a20a-5fe581154135"
     },
     {
       "cell_type": "code",
@@ -749,7 +733,7 @@
         "\n",
         "`-` 우리가 분석하는 데이터: 빅데이터..?"
       ],
-      "id": "6bc25f4e-bead-4801-9d9e-399d233d3b85"
+      "id": "75a2a0d8-724c-4af3-9e24-ce0b1abf31c9"
     },
     {
       "cell_type": "code",
@@ -795,7 +779,7 @@
         "\n",
         "`-` 데이터를 100개중에 1개만 꼴로만 쓰면 어떨까?"
       ],
-      "id": "1031c08b-bea0-48ba-a0b5-39f1476c7f50"
+      "id": "4a36a78e-f1cd-40e9-81c1-16d00493ba62"
     },
     {
       "cell_type": "code",
@@ -924,7 +908,7 @@
         "\n",
         "`-` ds: 섭스크립터블함"
       ],
-      "id": "9cc04474-0fb0-4b67-8efc-b30a2885990a"
+      "id": "1e464eac-616c-4486-8cbb-ce96d90dc3ef"
     },
     {
       "cell_type": "code",
@@ -995,7 +979,7 @@
         "\n",
         "`-` dl: 섭스크립터블하지 않지만 이터러블함"
       ],
-      "id": "8b6c444c-e401-45ff-8e6e-0e15f3b9e21d"
+      "id": "41ab9f01-f77f-4cd2-9843-3a491b1f5b97"
     },
     {
       "cell_type": "code",
@@ -1041,7 +1025,7 @@
         "`-` 마지막관측치는 뭔데 단독으로 업데이트하냐?? –\\> shuffle True 같이\n",
         "자잘한 옵션도 있음.."
       ],
-      "id": "c0f960a5-42c6-4c1c-b749-e52e1ec02343"
+      "id": "aaeb5782-6717-46cb-b509-8b31cb897cce"
     },
     {
       "cell_type": "code",
@@ -1081,7 +1065,7 @@
         "\n",
         "`-` 그냥 경사하강법 – 미니배치 안쓰는 학습, 우리가 맨날하는 그거"
       ],
-      "id": "81bcfdb2-8e0c-43c1-9c93-1eac30007bd3"
+      "id": "12d21189-d08b-46ba-8945-8b60ba804e8f"
     },
     {
       "cell_type": "code",
@@ -1129,7 +1113,7 @@
       "source": [
         "`-` “확률적”경사하강법 – 미니배치 쓰는 학습"
       ],
-      "id": "7cc01371-3691-4f5f-8cc9-56a4899ef352"
+      "id": "e600d5d9-a096-474e-abb5-932fe0a8e3e7"
     },
     {
       "cell_type": "code",
@@ -1180,7 +1164,7 @@
       "source": [
         "`-` GPU를 활용하는 “확률적”경사하강법 – 실제적으로는 이게 최종알고리즘"
       ],
-      "id": "8babf694-f879-4610-a44f-0350172f2438"
+      "id": "1b4a0ceb-8dad-4693-a0f1-60ef23b9ecfd"
     },
     {
       "cell_type": "code",
@@ -1256,7 +1240,7 @@
         "\n",
         "`-` 정리된 코드1: 통계잘하는데 파이토치 못쓰는 사람의 코드"
       ],
-      "id": "d8049114-eb5b-4479-87a7-24fa2f27860b"
+      "id": "88081328-9b3d-4c70-92db-bf673de64bbd"
     },
     {
       "cell_type": "code",
@@ -1306,7 +1290,7 @@
       "source": [
         "`-` 정리된 코드2: 파이토치를 잘하는 사람의 코드"
       ],
-      "id": "2ec4f7a3-0394-4291-8b01-8be54f3d09fd"
+      "id": "a117b050-fa0b-4821-a2ea-63ccb46e5e30"
     },
     {
       "cell_type": "code",
@@ -1362,7 +1346,7 @@
         "observation 마다 k개의 숫자가 있는데, 그중에서 유난히 큰 하나의 숫자가\n",
         "있음."
       ],
-      "id": "cbdba4b8-8996-4fc0-a20a-9565902978f6"
+      "id": "d79d13c8-3687-4ebc-aa2a-b8985a9fbf9c"
     },
     {
       "cell_type": "code",
@@ -1401,7 +1385,7 @@
         "\n",
         "(예시1) – 잘못계산"
       ],
-      "id": "b17546b3-7d7e-4d21-88ad-314769d92a5e"
+      "id": "39edd432-c6ec-42c4-b9de-015907d96425"
     },
     {
       "cell_type": "code",
@@ -1450,7 +1434,7 @@
       "source": [
         "(예시2) – 이게 맞게 계산되는 것임"
       ],
-      "id": "7ad8946b-6818-4660-ae99-03b2930452e9"
+      "id": "25dd88e6-444f-4392-91a8-7830c63c4eb1"
     },
     {
       "cell_type": "code",
@@ -1494,7 +1478,7 @@
       "source": [
         "(예시3) – 차원을 명시안하면 맞게 계산해주고 경고 줌"
       ],
-      "id": "57245327-d617-4b47-af81-2b1a29f0e2bd"
+      "id": "ff6b1372-9afc-4fd0-9b82-3be47456ba9b"
     },
     {
       "cell_type": "code",
@@ -1547,7 +1531,7 @@
       "source": [
         "(예시4) – 진짜 손계산"
       ],
-      "id": "ceaea7d5-4bb0-4c91-a65f-11e430ebadda"
+      "id": "c41bad5d-dc47-4691-8c34-e14096e9744a"
     },
     {
       "cell_type": "code",
@@ -1609,7 +1593,7 @@
         "\n",
         "`-` 예제1: BCELoss vs BCEWithLogisticLoss"
       ],
-      "id": "027cb5fa-4272-437a-8b9b-8595a2bd407a"
+      "id": "05a18cab-fb59-4730-8f86-f7e4dafdea74"
     },
     {
       "cell_type": "code",
@@ -1676,7 +1660,7 @@
       "source": [
         "`-` 예제2: BCEWithLogisticLoss vs CrossEntropyLoss"
       ],
-      "id": "86db6491-83aa-4683-96a1-f87e0ccd6881"
+      "id": "e26b9d1b-81c7-4b2a-980d-6b11c10699f0"
     },
     {
       "cell_type": "code",
@@ -1765,7 +1749,7 @@
         "\n",
         "***`# 3개의 카테고리`***"
       ],
-      "id": "63ced59c-db62-4b45-b99e-33348db989dd"
+      "id": "cbbbd35d-1801-412f-a342-171258bb6d0f"
     },
     {
       "cell_type": "code",
@@ -1847,7 +1831,7 @@
         "\n",
         "`-` 2개의 클래스일경우에도 CrossEntropy를 쓸 수 있지 않을까?"
       ],
-      "id": "61f8116a-4a8c-4035-ad99-d37c82eb20cc"
+      "id": "ea6217b4-68a4-49ae-a5bc-cafcef19763c"
     },
     {
       "cell_type": "code",
@@ -1944,7 +1928,7 @@
         "\n",
         "아래와 같은 자료가 있다."
       ],
-      "id": "f9f07c92-3dda-4742-bef1-7158a7658efe"
+      "id": "3789fbff-c30f-4878-8cd6-16007dead4dc"
     },
     {
       "cell_type": "code",
@@ -1991,7 +1975,7 @@
         "\n",
         "**hint** 원핫인코딩을 위해 아래의 함수를 사용하라."
       ],
-      "id": "dd8a4af6-12cd-4772-9465-5bdbab9cce77"
+      "id": "99b5cb5f-0f4f-42a6-b666-1ba32f95442b"
     },
     {
       "cell_type": "code",
@@ -2036,7 +2020,7 @@
         "-   총 iteration 수가 325가 되도록 적절하게 epoch 을 설정하라.\n",
         "-   GPU를 활용하여 학습하라."
       ],
-      "id": "581afe87-2844-49d3-87ef-6dcfec865f63"
+      "id": "4edd27fe-fc5a-495c-8267-d0a8a8654096"
     }
   ],
   "nbformat": 4,
@@ -2057,7 +2041,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.8"
+      "version": "3.12.2"
     }
   }
 }
