--- a/docs/posts/03wk-2.out.ipynb
+++ b/docs/posts/03wk-2.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "27644a10-e2fa-4e96-b15b-98856eca6fb0"
+      "id": "22b28198-59d5-4dbe-9f86-8e7f5bc1e760"
     },
     {
       "cell_type": "code",
@@ -44,7 +44,7 @@
         "\n",
         "`-` 아래와 같은 벡터 ${\\boldsymbol x}$를 가정하자."
       ],
-      "id": "ebd986da-7b81-42be-8e0e-6b721c87f43a"
+      "id": "06ff43bc-01ae-4bdd-8e71-b46970a7ab8c"
     },
     {
       "cell_type": "code",
@@ -69,7 +69,7 @@
         "\n",
         "## A. 방법1"
       ],
-      "id": "d0d75087-d20a-44dd-883c-5176317d4676"
+      "id": "4fd6e7d3-aede-437d-87a8-7c815f9a6c4e"
     },
     {
       "cell_type": "code",
@@ -140,7 +140,7 @@
         "\n",
         "## B. 방법2 – 렐루이용"
       ],
-      "id": "2fb481a9-61b7-467e-a4b6-e764dbe3fc3b"
+      "id": "9fb36dcb-b6c1-464d-9696-da1619f3d532"
     },
     {
       "cell_type": "code",
@@ -227,7 +227,7 @@
       "source": [
         "`-` 우리의 목표: 저 초록선에서 시그모이드를 태우면된다. 즉 아래의 느낌임"
       ],
-      "id": "51b0a417-f4f0-4e3d-bc46-2a22180fbd28"
+      "id": "e931b0fc-bb3e-4e85-98f0-4b97453e69ca"
     },
     {
       "cell_type": "code",
@@ -291,7 +291,7 @@
         "\n",
         "`-` 1단계"
       ],
-      "id": "cba6fddb-2994-47c5-b6cb-94fec3aeac34"
+      "id": "132f859f-1ca0-4c4a-b06e-b0aef13a128b"
     },
     {
       "cell_type": "code",
@@ -311,7 +311,7 @@
       "source": [
         "`-` 2단계"
       ],
-      "id": "2bcff08e-3936-4e4e-99fc-1ceb791b9801"
+      "id": "99d1a5a6-0031-4b8b-aba5-9f0861759522"
     },
     {
       "cell_type": "code",
@@ -332,7 +332,7 @@
       "source": [
         "`-` 3단계"
       ],
-      "id": "861f69c8-51d2-4d57-b84b-32ec2fa9897d"
+      "id": "da945416-c5d7-4ed2-9bf3-bbbb8357c87d"
     },
     {
       "cell_type": "code",
@@ -353,7 +353,7 @@
       "source": [
         "`-` 4단계"
       ],
-      "id": "bed8c4e3-7cd6-41b2-8171-b63d2e3a0b5f"
+      "id": "0977e184-3f58-4d35-9153-253292a0831c"
     },
     {
       "cell_type": "code",
@@ -385,11 +385,22 @@
       "source": [
         "`-` 그런데, 4단계는 아래와 같이 볼 수 있다.\n",
         "\n",
-        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} v_{11} & v_{12} \\\\ v_{21} & v_{22} \\\\ \\dots & \\dots \\\\ v_{n1} & v_{n2} \\\\ \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix} -4.5 v_{11} - 9.0 v_{12} + 4.5 \\\\ -4.5 v_{21} - 9.0 v_{22} + 4.5 \\\\ \\dots \\\\ -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\ \\end{bmatrix}$\n",
+        "-   ${\\boldsymbol v}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 = \\begin{bmatrix}\n",
+        "    v_{11} & v_{12}  \\\\\n",
+        "    v_{21} & v_{22}  \\\\\n",
+        "    \\dots & \\dots  \\\\\n",
+        "    v_{n1} & v_{n2}  \\\\\n",
+        "    \\end{bmatrix}\\begin{bmatrix} -4.5 \\\\ -9.0 \\end{bmatrix} + 4.5 =\n",
+        "    \\begin{bmatrix}\n",
+        "    -4.5 v_{11} - 9.0 v_{12} + 4.5  \\\\\n",
+        "    -4.5 v_{21} - 9.0 v_{22} + 4.5  \\\\\n",
+        "    \\dots \\\\\n",
+        "    -4.5 v_{n1} - 9.0 v_{n2} + 4.5 \\\\\n",
+        "    \\end{bmatrix}$\n",
         "\n",
         "위의 수식을 참고하여 매트릭스의 곱 형태로 다시 포현하면 아래와 같다."
       ],
-      "id": "f0754d4c-ae88-43ec-b6e2-93b2d09264ef"
+      "id": "94f40e3f-4564-4c51-a19d-9c422ce2605b"
     },
     {
       "cell_type": "code",
@@ -412,7 +423,7 @@
         "이제 매트릭스의 곱 대신에 `torch.nn.Linear()`를 이용하면 아래의 코드와\n",
         "같아진다."
       ],
-      "id": "6ea630d8-62cd-4e45-ac2f-221c6ddd60c7"
+      "id": "20113d74-1493-4a8f-b7ef-0cc7c6ed848f"
     },
     {
       "cell_type": "code",
@@ -467,7 +478,7 @@
         "x_n \n",
         "\\end{bmatrix}\\begin{bmatrix} 1 & -1 \\end{bmatrix} = \\begin{bmatrix} x_1 & -x_1 \\\\ x_2 & -x_2 \\\\ \\dots & \\dots \\\\ x_n & -x_n \\end{bmatrix}$$"
       ],
-      "id": "e4611df8-10c7-4f6d-ba32-8adf11388d0d"
+      "id": "ae8bbb8b-75ce-4004-a3a5-3dadf75c6f1d"
     },
     {
       "cell_type": "code",
@@ -514,7 +525,7 @@
         "`-` 따라서 `torch.nn` 에 포함된 레이어를 이용하면 아래와 같이 표현할 할\n",
         "수 있다."
       ],
-      "id": "f12f19ea-cecf-4396-a88a-b7d10b1f598f"
+      "id": "6b3a42ab-00a5-4c1e-ac78-c827069c0de5"
     },
     {
       "cell_type": "code",
@@ -553,7 +564,7 @@
         "`-` 각각의 layer를 `torch.nn.Sequential()` 로 묶으면 아래와 같이 정리할\n",
         "수 있다."
       ],
-      "id": "1a8e647b-d1fd-4731-9df4-1b545e26cf80"
+      "id": "5369a4f0-0072-4ca7-bec1-34442a431d18"
     },
     {
       "cell_type": "code",
@@ -622,7 +633,7 @@
         "\n",
         "## A. 데이터"
       ],
-      "id": "c5b406c7-d95f-4e09-a22e-938600069617"
+      "id": "5022e21a-eeec-41da-bdfd-d32792ca29d8"
     },
     {
       "cell_type": "code",
@@ -687,7 +698,7 @@
         "\n",
         "`-` Step2,3,4 는 너무 뻔해서.."
       ],
-      "id": "91a376f1-764c-489c-a215-75b5148b1248"
+      "id": "58c09534-b5d1-4158-b2ca-bc21c5569532"
     },
     {
       "cell_type": "code",
