--- a/docs/posts/05wk-1.out.ipynb
+++ b/docs/posts/05wk-1.out.ipynb
@@ -17,7 +17,7 @@
         "\n",
         "# 2. Imports"
       ],
-      "id": "e0426c4c-c29f-4e73-9ca0-ffea66a6344b"
+      "id": "1004080a-dc49-49bc-ae49-55daab0b2194"
     },
     {
       "cell_type": "code",
@@ -43,11 +43,15 @@
         "`-` 파이토치에서 GPU를 쓰는 방법을 알아보자. (사실 지금까지 우리는 CPU만\n",
         "쓰고 있었음)\n",
         "\n",
+        "`-` 코랩에서 GPU설정하는 방법: (아래영상참고)\n",
+        "\n",
+        "<https://youtu.be/GyBL2YBCzoc>\n",
+        "\n",
         "## A. GPU 사용방법\n",
         "\n",
         "`-` cpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "112930e8-d888-45ad-a303-e21ecf49a735"
+      "id": "9a279832-e3f5-4723-a001-f56659087eae"
     },
     {
       "cell_type": "code",
@@ -70,7 +74,7 @@
       "source": [
         "`-` gpu 연산이 가능한 메모리에 데이터 저장"
       ],
-      "id": "7ae25fec-2fb0-4540-83ed-4635c38c4895"
+      "id": "96c7a971-10b9-407e-9857-52550b74f396"
     },
     {
       "cell_type": "code",
@@ -176,7 +180,7 @@
         "\n",
         "`-` cpu 혹은 gpu 연산이 가능한 메모리에 저장된 값들을 확인"
       ],
-      "id": "1156b7cb-3ccd-4e09-9124-56c817ed448e"
+      "id": "709bdfec-39bd-4b1b-b358-87c29f08a3a2"
     },
     {
       "cell_type": "code",
@@ -210,7 +214,7 @@
         "\n",
         "(예시1)"
       ],
-      "id": "02963db5-2d0b-4aad-8e4a-a8fd1f130b74"
+      "id": "76c7e76e-5d45-4823-bdfa-9e4bfb8fbcb7"
     },
     {
       "cell_type": "code",
@@ -230,7 +234,7 @@
       "source": [
         "(예시2)"
       ],
-      "id": "b1be91bd-fc21-48c9-b3f9-4e86f70eedc6"
+      "id": "ce725c45-e271-4e9d-9da3-4e37c9788c13"
     },
     {
       "cell_type": "code",
@@ -250,7 +254,7 @@
       "source": [
         "(예시3)"
       ],
-      "id": "a676fb9a-a10b-4319-a755-9382fd3064f3"
+      "id": "164865c6-2322-447d-af00-478fa47ccd46"
     },
     {
       "cell_type": "code",
@@ -289,7 +293,7 @@
         "\n",
         "(예시4)"
       ],
-      "id": "2d120eba-4a4a-4bd3-b5e1-5eca4c9f264f"
+      "id": "cb34efcf-47d8-4937-b819-36b9f6d489f9"
     },
     {
       "cell_type": "code",
@@ -309,7 +313,7 @@
       "source": [
         "(예시5)"
       ],
-      "id": "7d9d6a3e-04d9-4178-afea-c20939d59d4d"
+      "id": "5ba7ca4f-95d2-4a12-9b9b-2bcb2eee0290"
     },
     {
       "cell_type": "code",
@@ -329,7 +333,7 @@
       "source": [
         "(예시6)"
       ],
-      "id": "7a291c9e-da25-431f-9c10-3955dc80c983"
+      "id": "7f4a1042-ae01-48ba-a75e-12305c35b450"
     },
     {
       "cell_type": "code",
@@ -349,7 +353,7 @@
       "source": [
         "(예시7)"
       ],
-      "id": "0d203caf-00ee-4a2a-a4a3-66f0af64aacb"
+      "id": "70db4ab5-6900-47ea-b8f9-8e2715d45c89"
     },
     {
       "cell_type": "code",
@@ -369,7 +373,7 @@
       "source": [
         "(예시8)"
       ],
-      "id": "50aa437d-067c-4550-bdca-b64632020d26"
+      "id": "06f65308-6af5-4bca-9e48-ae0c8a7978fd"
     },
     {
       "cell_type": "code",
@@ -389,7 +393,7 @@
       "source": [
         "## B. 시간측정 (예비학습)"
       ],
-      "id": "afb6ed59-b6d2-4ebf-8985-e090c0e89003"
+      "id": "6d04ca06-ed19-4b92-8882-872bcb1e6ef4"
     },
     {
       "cell_type": "code",
@@ -447,7 +451,7 @@
         "\n",
         "`-` CPU (512 nodes)"
       ],
-      "id": "25a1a104-8f47-44b9-b86f-3c6e9bb427a6"
+      "id": "fa8ddb86-1a2a-4016-b7fe-54af92b65748"
     },
     {
       "cell_type": "code",
@@ -491,7 +495,7 @@
       "source": [
         "`-` GPU (512 nodes)"
       ],
-      "id": "9e01f2b9-87a3-46a4-8d07-7627491e63e0"
+      "id": "a8f04ef6-30ed-445d-8b24-4077b0812db9"
     },
     {
       "cell_type": "code",
@@ -539,7 +543,7 @@
         "\n",
         "`-` CPU (20,480)"
       ],
-      "id": "457fa203-bf0d-459a-80c4-cc0714c79a07"
+      "id": "7f0c266a-f7e4-461c-bc17-4707b359cb3c"
     },
     {
       "cell_type": "code",
@@ -583,7 +587,7 @@
       "source": [
         "`-` GPU (20,480)"
       ],
-      "id": "e240e83f-e3ad-4e4b-9f61-1454b416786b"
+      "id": "2714fe64-f7a4-46e3-a523-d1ecd4ab0ab8"
     },
     {
       "cell_type": "code",
@@ -633,7 +637,7 @@
         "\n",
         "`-` CPU (204,800)"
       ],
-      "id": "f1c13727-5fe7-4dcc-ab72-cecc90cb975c"
+      "id": "c1504765-6ca4-4182-b23d-f211cb16dd1e"
     },
     {
       "cell_type": "code",
@@ -677,7 +681,7 @@
       "source": [
         "`-` GPU (204,800)"
       ],
-      "id": "98d3e9ae-bab8-4b5e-a20a-5fe581154135"
+      "id": "965eb493-49f5-4d58-8eca-f7e999b7c439"
     },
     {
       "cell_type": "code",
@@ -733,7 +737,7 @@
         "\n",
         "`-` 우리가 분석하는 데이터: 빅데이터..?"
       ],
-      "id": "75a2a0d8-724c-4af3-9e24-ce0b1abf31c9"
+      "id": "0f8c5021-5bbe-4002-862f-469308bc635f"
     },
     {
       "cell_type": "code",
@@ -779,7 +783,7 @@
         "\n",
         "`-` 데이터를 100개중에 1개만 꼴로만 쓰면 어떨까?"
       ],
-      "id": "4a36a78e-f1cd-40e9-81c1-16d00493ba62"
+      "id": "b297fd2f-1ab5-4ea7-a512-f6562fd85c88"
     },
     {
       "cell_type": "code",
@@ -833,9 +837,9 @@
         "\n",
         "`# ver1` – 모든 샘플을 이용하여 slope 계산\n",
         "\n",
-        "(epoch 1) $loss=\\sum_{i=1}^{10}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
+        "(epoch 1) $loss=\\sum_{i=1}^{10}(y_i-w_0-w_1x_i)^2 \\to slope  \\to update$\n",
         "\n",
-        "(epoch 2) $loss=\\sum_{i=1}^{10}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
+        "(epoch 2) $loss=\\sum_{i=1}^{10}(y_i-w_0-w_1x_i)^2 \\to slope  \\to update$\n",
         "\n",
         "…\n",
         "\n",
@@ -848,14 +852,14 @@
         "-   $loss=(y_1-w_0-w_1x_1)^2 \\to slope \\to update$\n",
         "-   $loss=(y_2-w_0-w_1x_2)^2 \\to slope \\to update$\n",
         "-   …\n",
-        "-   $loss=(y_{10}-w_0-w_1x_{10})^2 \\to slope \\to update$\n",
+        "-   $loss=(y_{10}-w_0-w_1x_{10})^2  \\to  slope  \\to  update$\n",
         "\n",
         "(epoch 2)\n",
         "\n",
-        "-   $loss=(y_1-w_0-w_1x_1)^2 \\to slope \\to update$\n",
-        "-   $loss=(y_2-w_0-w_1x_2)^2 \\to slope \\to update$\n",
+        "-   $loss=(y_1-w_0-w_1x_1)^2  \\to slope  \\to  update$\n",
+        "-   $loss=(y_2-w_0-w_1x_2)^2  \\to slope  \\to  update$\n",
         "-   …\n",
-        "-   $loss=(y_{10}-w_0-w_1x_{10})^2 \\to slope \\to update$\n",
+        "-   $loss=(y_{10}-w_0-w_1x_{10})^2  \\to  slope  \\to  update$\n",
         "\n",
         "…\n",
         "\n",
@@ -865,17 +869,17 @@
         "\n",
         "(epoch 1)\n",
         "\n",
-        "-   $loss=\\sum_{i=1}^{3}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=\\sum_{i=4}^{6}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=\\sum_{i=7}^{9}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=(y_{10}-w_0-w_1x_{10})^2 \\to slope \\to update$\n",
+        "-   $loss=\\sum_{i=1}^{3}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=\\sum_{i=4}^{6}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=\\sum_{i=7}^{9}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=(y_{10}-w_0-w_1x_{10})^2  \\to  slope  \\to  update$\n",
         "\n",
         "(epoch 2)\n",
         "\n",
-        "-   $loss=\\sum_{i=1}^{3}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=\\sum_{i=4}^{6}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=\\sum_{i=7}^{9}(y_i-w_0-w_1x_i)^2 \\to slope \\to update$\n",
-        "-   $loss=(y_{10}-w_0-w_1x_{10})^2 \\to slope \\to update$\n",
+        "-   $loss=\\sum_{i=1}^{3}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=\\sum_{i=4}^{6}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=\\sum_{i=7}^{9}(y_i-w_0-w_1x_i)^2  \\to  slope  \\to  update$\n",
+        "-   $loss=(y_{10}-w_0-w_1x_{10})^2  \\to  slope  \\to  update$\n",
         "\n",
         "…\n",
         "\n",
@@ -908,7 +912,7 @@
         "\n",
         "`-` ds: 섭스크립터블함"
       ],
-      "id": "1e464eac-616c-4486-8cbb-ce96d90dc3ef"
+      "id": "ef76dec3-65e4-4bf3-9b4d-e70ab8a7d2d5"
     },
     {
       "cell_type": "code",
@@ -979,7 +983,7 @@
         "\n",
         "`-` dl: 섭스크립터블하지 않지만 이터러블함"
       ],
-      "id": "41ab9f01-f77f-4cd2-9843-3a491b1f5b97"
+      "id": "74bf7bee-1f92-4d01-9f5c-23d966e32762"
     },
     {
       "cell_type": "code",
@@ -1025,7 +1029,7 @@
         "`-` 마지막관측치는 뭔데 단독으로 업데이트하냐?? –\\> shuffle True 같이\n",
         "자잘한 옵션도 있음.."
       ],
-      "id": "aaeb5782-6717-46cb-b509-8b31cb897cce"
+      "id": "998b2a9e-3b3b-4e35-9a57-87af2a567fdb"
     },
     {
       "cell_type": "code",
@@ -1065,7 +1069,7 @@
         "\n",
         "`-` 그냥 경사하강법 – 미니배치 안쓰는 학습, 우리가 맨날하는 그거"
       ],
-      "id": "12d21189-d08b-46ba-8945-8b60ba804e8f"
+      "id": "d988c336-ad3b-4c13-98be-f61fe759f2ff"
     },
     {
       "cell_type": "code",
@@ -1113,7 +1117,7 @@
       "source": [
         "`-` “확률적”경사하강법 – 미니배치 쓰는 학습"
       ],
-      "id": "e600d5d9-a096-474e-abb5-932fe0a8e3e7"
+      "id": "559118c1-3774-4947-b638-a379edd6b7d8"
     },
     {
       "cell_type": "code",
@@ -1164,7 +1168,7 @@
       "source": [
         "`-` GPU를 활용하는 “확률적”경사하강법 – 실제적으로는 이게 최종알고리즘"
       ],
-      "id": "1b4a0ceb-8dad-4693-a0f1-60ef23b9ecfd"
+      "id": "94087a26-93e3-4deb-b08b-1b870d8fa11c"
     },
     {
       "cell_type": "code",
@@ -1240,7 +1244,7 @@
         "\n",
         "`-` 정리된 코드1: 통계잘하는데 파이토치 못쓰는 사람의 코드"
       ],
-      "id": "88081328-9b3d-4c70-92db-bf673de64bbd"
+      "id": "97572ec8-cb80-45dc-b797-d99ac437c6d8"
     },
     {
       "cell_type": "code",
@@ -1290,7 +1294,7 @@
       "source": [
         "`-` 정리된 코드2: 파이토치를 잘하는 사람의 코드"
       ],
-      "id": "a117b050-fa0b-4821-a2ea-63ccb46e5e30"
+      "id": "52d8abfb-deab-459a-8b44-8c643f1f0691"
     },
     {
       "cell_type": "code",
@@ -1346,7 +1350,7 @@
         "observation 마다 k개의 숫자가 있는데, 그중에서 유난히 큰 하나의 숫자가\n",
         "있음."
       ],
-      "id": "d79d13c8-3687-4ebc-aa2a-b8985a9fbf9c"
+      "id": "26c5f3e0-15f6-4c8f-aabc-5c0c14273be7"
     },
     {
       "cell_type": "code",
@@ -1385,7 +1389,7 @@
         "\n",
         "(예시1) – 잘못계산"
       ],
-      "id": "39edd432-c6ec-42c4-b9de-015907d96425"
+      "id": "4b742545-0b4b-437f-95eb-4641627d7b91"
     },
     {
       "cell_type": "code",
@@ -1434,7 +1438,7 @@
       "source": [
         "(예시2) – 이게 맞게 계산되는 것임"
       ],
-      "id": "25dd88e6-444f-4392-91a8-7830c63c4eb1"
+      "id": "3e5413ff-9e6b-4e7d-81e7-9137756499fa"
     },
     {
       "cell_type": "code",
@@ -1478,7 +1482,7 @@
       "source": [
         "(예시3) – 차원을 명시안하면 맞게 계산해주고 경고 줌"
       ],
-      "id": "ff6b1372-9afc-4fd0-9b82-3be47456ba9b"
+      "id": "ee212090-5a3e-4e8c-82c2-247451cf3ac1"
     },
     {
       "cell_type": "code",
@@ -1531,7 +1535,7 @@
       "source": [
         "(예시4) – 진짜 손계산"
       ],
-      "id": "c41bad5d-dc47-4691-8c34-e14096e9744a"
+      "id": "02502c2e-d407-4d4f-8788-ab5ee65b3e44"
     },
     {
       "cell_type": "code",
@@ -1593,7 +1597,7 @@
         "\n",
         "`-` 예제1: BCELoss vs BCEWithLogisticLoss"
       ],
-      "id": "05a18cab-fb59-4730-8f86-f7e4dafdea74"
+      "id": "92626c77-95ec-4a26-bc33-53640eb78460"
     },
     {
       "cell_type": "code",
@@ -1660,7 +1664,7 @@
       "source": [
         "`-` 예제2: BCEWithLogisticLoss vs CrossEntropyLoss"
       ],
-      "id": "e26b9d1b-81c7-4b2a-980d-6b11c10699f0"
+      "id": "78550d65-b9ff-40b0-82f8-f740a4cb64fd"
     },
     {
       "cell_type": "code",
@@ -1749,7 +1753,7 @@
         "\n",
         "***`# 3개의 카테고리`***"
       ],
-      "id": "cbbbd35d-1801-412f-a342-171258bb6d0f"
+      "id": "d50926d1-462f-4e9b-885b-5611873e3915"
     },
     {
       "cell_type": "code",
@@ -1831,7 +1835,7 @@
         "\n",
         "`-` 2개의 클래스일경우에도 CrossEntropy를 쓸 수 있지 않을까?"
       ],
-      "id": "ea6217b4-68a4-49ae-a5bc-cafcef19763c"
+      "id": "6f9335cf-451d-412a-a542-de445f685f25"
     },
     {
       "cell_type": "code",
@@ -1928,7 +1932,7 @@
         "\n",
         "아래와 같은 자료가 있다."
       ],
-      "id": "3789fbff-c30f-4878-8cd6-16007dead4dc"
+      "id": "2e8cbe80-1a43-4b55-9bea-ad502db85804"
     },
     {
       "cell_type": "code",
@@ -1975,7 +1979,7 @@
         "\n",
         "**hint** 원핫인코딩을 위해 아래의 함수를 사용하라."
       ],
-      "id": "99b5cb5f-0f4f-42a6-b666-1ba32f95442b"
+      "id": "a7a5f706-0589-4ae7-99ec-4c8116294d63"
     },
     {
       "cell_type": "code",
@@ -2020,7 +2024,7 @@
         "-   총 iteration 수가 325가 되도록 적절하게 epoch 을 설정하라.\n",
         "-   GPU를 활용하여 학습하라."
       ],
-      "id": "4edd27fe-fc5a-495c-8267-d0a8a8654096"
+      "id": "0612045c-e5af-4a5f-bef3-117a873a3986"
     }
   ],
   "nbformat": 4,
@@ -2041,7 +2045,7 @@
       "mimetype": "text/x-python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.2"
+      "version": "3.11.8"
     }
   }
 }
